Add labels and span tags to list items.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </select>
           </div>
 
+          <label for="track-choice">What Class Will You Take Next?:</label>
           <div class="radio">
             <label>
               <input type="radio" name="track" value="ruby" checked>
@@ -70,14 +71,15 @@
 
       <div id="confirm">
         <h1>Confirmation</h1>
-        <ul><li class="fName"></li>
-            <li class="lName"></li>
-            <li class="email"></li>
-            <li class="radio-input"></li>
-            <li class="beverage-input"></li>
-            <li class="date"></li>
-            <li class="color"></li>
+            <li>First Name: <span class="fName"></span></li>
+            <li>Last Name: <span class="lName"></span></li>
+            <li>Email: <span class="email"></span></li>
+            <li>Beverage: <span class="beverage-input"></span></li>
+            <li>Track: <span class="radio-input"></span></li>
+            <li>Birthday: <span class="date"></span></li>
+            <li>Favorite Color: <span class="color"></span></li>
         </ul>
+
       </div>
     </div>
   </body>
